--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^6.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "style-loader": "^3.3.1"
   }
 }
