--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.3.0",
     "css-loader": "^6.5.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-live": "^2.4.1",
     "react-router-dom": "^6.2.1",
     "style-loader": "^3.3.1"
   }
